# DoKit

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-cn.md  CONTRIBUTING.md  DoraemonKit-Swift.podspec  DoraemonKit.podspec  LICENSE  README.md  README_CN.md  README_EN.md  README的副本.md  test.md
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: -dokit-------------.md
Android/: .editorconfig  .gitignore  README.md  build.gradle  config.gradle  dokit_module.json  gradle.properties  local.properties  package.json  settings.gradle  upload.gradle  upload.sh  upload_didi.sh  upload_local.sh  upload_maven.sh  upload_maven_central.gradle  upload_private.gradle
Android/MiniApp/: build.gradle
Android/adb/: build.gradle  upload.gradle
Android/app/: build.gradle  doraemonkit.gradle  proguard-rules.pro
Android/buildSrc/: build.gradle
Android/dokit-xhook/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties
Doc/: ChineseReadme.md  ReleaseNotes.md  android-ReleaseNotes.md  android_cn_guide.md  android_en_guide.md  iOS-ReleaseNotes.md  iOS_cn_guide.md  iOS_en_guide.md  miniapp-ReleaseNotes.md  miniapp_cn_guide.md
Flutter/: .gitignore  .metadata  .packages  .taco  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  flutterw  pubspec.yaml
Web/: .gitignore  DEVELOPMENT.md  README.md  index.html  jest.config.js  lerna.json  package-lock.json  package.json  rollup.config.js
docs/: index.md
iOS/: .gitignore  Podfile  README.md
miniapp/: .babelrc  .gitignore  README.md  gulpfile.babel.js  package-lock.json  package.json  postcss.config.js
(+7134 files in other folders)
